force-app/main/default/objects/Visit/fields/Agent_Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Agent_Dedupe_Key__c</fullName>
    <description>Deterministic key used to prevent duplicate visit creation from channel retries.</description>
    <label>Agent Dedupe Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>