force-app/main/default/objects/Visit/fields/Agent_Entry_Channel__c.field-meta.xml
<CustomField>
    <fullName>Agent_Entry_Channel__c</fullName>
    <description>Primary entry surface used to create or update the visit through the employee agent.</description>
    <label>Agent Entry Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesforceMobile</fullName>
                <default>true</default>
                <label>Salesforce Mobile</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>