force-app/main/default/objects/Visit/fields/Agent_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Language_Code__c</fullName>
    <description>Language of the visit summary captured by the employee agent.</description>
    <label>Agent Language Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>