force-app/main/default/objects/Visit/fields/Final_Summary__c.field-meta.xml
<CustomField>
    <fullName>Final_Summary__c</fullName>
    <description>Final normalized summary approved by the rep for the outreach visit.</description>
    <label>Final Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>