force-app/main/default/objects/Visit/fields/Summary_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Summary_Confidence__c</fullName>
    <description>Confidence score for the final summary and provider/facility match.</description>
    <label>Summary Confidence</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>